force-app/main/default/objects/NEPA_Permit_Matrix__mdt/fields/Initiation_Gate__c.field-meta.xml
<CustomField>
    <fullName>Initiation_Gate__c</fullName>
    <description>The NEPA process stage by which permit applications in this matrix row should be initiated. Copied to nepa_required_permit__c.nepa_nepa_stage_gate__c at record creation. Used by NEPA_Stage_Gate_Doc_Check to block ROD/FONSI when critical-path permits have not been initiated by the required gate.</description>
    <inlineHelpText>NEPA stage by which permits in this row should be initiated (e.g., Scoping, Draft EA/EIS). Drives the stage gate check at ROD/FONSI.</inlineHelpText>
    <label>Initiation Gate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pre-Application</fullName><default>false</default><label>Pre-Application</label></value>
            <value><fullName>Scoping</fullName><default>false</default><label>Scoping</label></value>
            <value><fullName>Draft EA/EIS</fullName><default>false</default><label>Draft EA/EIS</label></value>
            <value><fullName>Final EA/EIS</fullName><default>false</default><label>Final EA/EIS</label></value>
            <value><fullName>ROD/FONSI</fullName><default>false</default><label>ROD/FONSI</label></value>
            <value><fullName>Any</fullName><default>true</default><label>Any</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>